Filme controller fixed with the analises methods

--- a/src/main/resources/templates/cadastrar.html
+++ b/src/main/resources/templates/cadastrar.html
@@ -8,7 +8,7 @@
     <h1>Cadastre seu filme</h1>
 
     <div>
-        <form th:action="@{/cadastrarFilme}" method="POST" >
+        <form th:action="@{/cadastrarFilme}" method="POST" th:object="${filme}">
             <p>Id: <input type="text" th:field="${filme.id}"></p>
             <p>Titulo: <input type="text" th:field="${filme.titulo}"></p>
             <p>Sinopse: <input type="text" th:field="${filme.sinopse}"></p>
