--- a/src/main/resources/templates/cadastrar.html
+++ b/src/main/resources/templates/cadastrar.html
@@ -12,7 +12,7 @@
             <p>Titulo: <input type="text" th:field="${filme.titulo}"></p>
             <p>Sinopse: <input type="text" th:field="${filme.sinopse}"></p>
             <p>Genero: <input type="text" th:field="${filme.genero}"></p>
-            <p>Ano Lançamento: <input type="text" th:field="${filme.anoLancamento}" ></p>
+            <p>Ano Lançamento: <input type="date" th:field="${filme.anoLancamento}" ></p>
             <button type="submit">Cadastrar</button>
         </form>
     </div>
