--- a/src/main/resources/templates/detalhes.html
+++ b/src/main/resources/templates/detalhes.html
@@ -8,11 +8,10 @@
     <div>
 
         <h2>Enviar analise:</h2>
-        <form th:action="@{/cadastrarAnalise}" method="POST" th:object="${feedback}">
-            <input type="text" th:field="${filme.id}" hidden>
-            <input type="" th:field="${filme.titulo}" hidden>
-            <p>Analise: <input type="text" th:field="${feedback.comment}"></p>
-            <p>Nota: <input type="text" th:field="${feedback.nota}"></p>
+        <form method="POST" th:object="${feedback}" id="formAdicionarAnalise">
+            <input type="text" th:field="${filme.id}" hidden id="filmeId">
+            <p>Analise: <input type="text" th:field="${feedback.comment}" id="comment"></p>
+            <p>Nota: <input type="text" th:field="${feedback.nota}" id="nota"></p>
             <button type="submit">Enviar</button>
         </form>
 
@@ -31,5 +30,7 @@
     </div>
     <div th:insert="footerNav.html :: footer">
     </div>
+    <script th:src="@{/js/jquery-3.7.1.js}"></script>
+    <script th:src="@{/js/script.js}"></script>
 </body>
 </html>
