--- a/src/main/resources/templates/cadastrar.html
+++ b/src/main/resources/templates/cadastrar.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Cadastrar Filme</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <h1>Cadastre seu filme</h1>
 
-    <div>
-        <form method="POST" th:object="${filme}" id="formCadastroFilme">
-            <p>Titulo: <input type="text" th:field="${filme.titulo}" id="titulo" name="titulo"></p>
-            <p>Sinopse: <input type="text" th:field="${filme.sinopse}" id="sinopse" name="sinopse"></p>
-            <p>Genero: <input type="text" th:field="${filme.genero}" id="genero" name="genero"></p>
-            <p>Ano Lançamento: <input type="date" th:field="${filme.anoLancamento}" id="anoLancamento" name="anoLancamento"></p>
-            <button type="submit">Cadastrar</button>
+    <div class="mb-3">
+        <form method="POST" th:object="${filme}" id="formCadastroFilme" >
+            <p>Titulo: <input type="text" th:field="${filme.titulo}" id="titulo" name="titulo"  class="form-control border border-primary"></p>
+            <p>Sinopse: <input type="text" th:field="${filme.sinopse}" id="sinopse" name="sinopse"  class="form-control border border-primary"></p>
+            <p>Genero: <input type="text" th:field="${filme.genero}" id="genero" name="genero"  class="form-control border border-primary"></p>
+            <p>Ano Lançamento: <input type="date" th:field="${filme.anoLancamento}" id="anoLancamento" name="anoLancamento"  class="form-control border border-primary"></p>
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
         </form>
     </div>
 
