--- a/src/main/resources/templates/detalhes.html
+++ b/src/main/resources/templates/detalhes.html
@@ -3,29 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Detalhes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div>
+    <div >
 
         <h2>Enviar analise:</h2>
         <form method="POST" th:object="${feedback}" id="formAdicionarAnalise">
             <input type="text" th:field="${filme.id}" hidden id="filmeId">
-            <p>Analise: <input type="text" th:field="${feedback.comment}" id="comment"></p>
-            <p>Nota: <input type="text" th:field="${feedback.nota}" id="nota"></p>
-            <button type="submit">Enviar</button>
+            <p>Analise: <input type="text" th:field="${feedback.comment}" id="comment" class="form-control"></p>
+            <p>Nota: <input type="text" th:field="${feedback.nota}" id="nota" class="form-control"></p>
+            <button type="submit" class="btn btn-info">Enviar</button>
         </form>
 
         <h2>Análises: </h2>
 
-        <table border="2px">
+        <table border="2px" class="table  table-striped">
             <thead>
-            <td>Comentário</td>
-            <td>Nota</td>
+                <td>Comentário</td>
+                <td>Nota</td>
             </thead>
-            <tr th:each="a : ${analises}" >
-                <td th:text="${a.comment}" />
-                <td th:text="${a.nota}" />
-            </tr>
+           <tbody id="tabelaAnalises">
+
+           <!-- -->
+               <tr th:each="a : ${analises}" >
+                   <td th:text="${a.comment}" />
+                   <td th:text="${a.nota}" />
+                   <td>
+                       <button class="btn btn-success">Atualizar</button>
+                   </td>
+                   <td>
+                       <button class="btn btn-danger">Excluir</button>
+                   </td>
+               </tr>
+           </tbody>
         </table>
     </div>
     <div th:insert="footerNav.html :: footer">
