--- a/src/main/resources/templates/filmes.html
+++ b/src/main/resources/templates/filmes.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Lista de filmes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
   <h1>Lista de Filmes</h1>
     <div>
-        <table>
+        <table  class="table table-striped">
             <thead>
                 <th>ID</th>
                 <th>Titulo</th>
@@ -15,7 +16,8 @@
                 <th>Genero</th>
                 <th>Ano lançamento</th>
             </thead>
-            <tbody>
+            <tbody id="tabelaFilmes">
+                <!--
                 <tr th:each="filme: ${filmes}">
                     <td th:text="${filme.id}" />
                     <td th:text="${filme.titulo}" />
@@ -26,11 +28,14 @@
                         <a th:href="@{/exibirAnalise/{id}(id=${filme.id})}">Analises</a>
                     </td>
                 </tr>
+                -->
             <tbody/>
         </table>
     </div>
     <div th:insert="footerNav.html :: footer">
 
     </div>
+  <script th:src="@{/js/jquery-3.7.1.js}"></script>
+  <script th:src="@{/js/script.js}"></script>
 </body>
 </html>
