--- a/src/main/resources/templates/footerNav.html
+++ b/src/main/resources/templates/footerNav.html
@@ -1,3 +1,3 @@
 <footer>
-  <a th:href="@{/}">Voltar</a>
+  <a th:href="@{/}" class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Voltar</a>
 </footer>
