[ADD~] Cookies para selecionar o tema escuro ou claro

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,4 +1,5 @@
 <nav>
   <a th:href="@{/cadastrarFilme}" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Cadastrar Filme</a>
   <a th:href="@{/listarFilmes}" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Listar Filmes</a>
+  <a th:href="@{/preferencias}" class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Preferencias</a>
 </nav>
