--- a/src/main/resources/templates/filmes.html
+++ b/src/main/resources/templates/filmes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Lista de filmes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link th:href="@{/css/__${css}__.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <h1>Lista de Filmes</h1>
