--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <title>Filmes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link th:href="@{/css/__${css}__.css}" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <h1>Filmes assistidos</h1>
     <header th:insert="navbar.html :: nav"></header>
 
 </body>
+<script th:src="@{/js/jquery-3.7.1.js}"></script>
+<script th:src="@{/js/script.js}"></script>
 </html>
