--- a/src/main/resources/templates/filmes.html
+++ b/src/main/resources/templates/filmes.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Lista de Filmes</h1>
     <div>
-        <table  class="table table-striped">
+        <table  class="table table-dark">
             <thead>
                 <th>ID</th>
                 <th>Titulo</th>
