--- a/src/main/resources/templates/filmes.html
+++ b/src/main/resources/templates/filmes.html
@@ -11,6 +11,7 @@
         body {
             background-color: #0c0c0c;
             color: #fff;
+            scroll-behavior:smooth;
         }
         .movie-card {
             background-color: #1f1f1f;
@@ -26,14 +27,17 @@
             margin-top: 10px;
             color: #fff;
         }
-        .navbar {
-            background-color: #1a1a1a;
-        }
+          .navbar {
+            background-color: #000;
+          }
+          .navbar-brand img {
+            height: 40px;
+          }
     </style>
 </head>
 <body>
 <!-- Barra de Navegação -->
-<header th:insert="navbar.html :: nav"></header>
+<header th:insert="navbar.html :: nav" class="sticky-top"></header>
 
 <!-- Cabeçalho -->
 <header class="container mt-5">
@@ -43,7 +47,7 @@
 <!-- Grade de Filmes -->
 <div class="container">
     <div class="row">
-        <!-- Cartão do Filme -->
+        <!-- Cartão do Movie -->
         <div class="col-md-3 mb-4">
             <div class="card movie-card">
                 <img src="https://via.placeholder.com/300x450" class="card-img-top movie-poster" alt="Filme 1">
@@ -52,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <!-- Repita o bloco acima para mais filmes -->
+        <!-- Repita o bloco acima para mais movies -->
         <div class="col-md-3 mb-4">
             <div class="card movie-card">
                 <img src="https://via.placeholder.com/300x450" class="card-img-top movie-poster" alt="Filme 2">
@@ -77,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <!-- Adicione mais colunas para mais filmes -->
+        <!-- Adicione mais colunas para mais movies -->
     </div>
 </div>
 
