--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -10,10 +10,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Início</a>
+                    <a class="nav-link" th:href="@{/}">Início</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Filmes</a>
+                    <a class="nav-link" th:href="@{/listarFilmes}">Filmes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Séries</a>
