--- a/src/main/resources/templates/old/filmes.html
+++ b/src/main/resources/templates/old/filmes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de filmes</title>
+    <title>Lista de movie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link th:href="@{/css/__${css}__.css}" rel="stylesheet" type="text/css"/>
 </head>
@@ -20,7 +20,7 @@
             </thead>
             <tbody id="tabelaFilmes">
                 <!--
-                <tr th:each="filme: ${filmes}">
+                <tr th:each="filme: ${movie}">
                     <td th:text="${filme.id}" />
                     <td th:text="${filme.titulo}" />
                     <td th:text="${filme.sinopse}" />
