--- a/src/main/resources/templates/detalhes.html
+++ b/src/main/resources/templates/detalhes.html
@@ -6,6 +6,8 @@
   <title>Detalhes do Filme</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" href="https://static-assets.bamgrid.com/product/disneyplus/favicons/favicon-aurora.9c40657cf520f9cfcf49dbb4f316aa7c.ico" type="image/png">
+
   <!-- Custom Styles -->
   <style>
     body {
@@ -57,7 +59,7 @@
 </head>
 <body>
   <!-- NavBar-->
-  <header th:insert="navbar.html :: nav"></header>
+  <header th:insert="navbar.html :: nav" class="sticky-top"></header>
   <!-- Seção de detalhes do movie -->
   <div class="movie-background">
     <div class="movie-overlay d-flex align-items-center">
@@ -70,7 +72,7 @@
               <span class="badge">Família</span>
             </p>
             <div class="movie-actions">
-              <a th:href="@{/assistir}">
+              <a th:href="@{/play}">
               <button type="button" class="btn btn-primary btn-lg me-2" >Assistir</button>
               </a>
               <a href="https://youtu.be/U8FRkDYNkk4" target="_blank">
