--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,7 +79,7 @@
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Banner 1">
+        <img src="http://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Banner 1">
       </div>
       <div class="carousel-item">
         <img src="https://disney.images.edge.bamgrid.com/ripcut-delivery/v2/variant/disney/2fbd16eb-7bc0-4f97-bbaa-1ec00fe85df1/compose?format=webp&width=1440" class="d-block w-100" alt="Banner 2">
@@ -126,57 +126,21 @@
   </div>
 
     <!-- Carrossel de Filmes -->
-  <div id="slider" class="carousel slide slider" data-bs-ride="false">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="row">
-          <div class="col">
-            <a th:href="@{/detalhes}">
-                <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 1">
-            </a>
-          </div>
-          <div class="col">
-            <a th:href="@{/detalhes}">
-              <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 2">
-            </a>
-          </div>
-          <div class="col">
-            <a th:href="@{/detalhes}">
-              <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 3">
-            </a>
-          </div>
-          <div class="col">
-            <a th:href="@{/detalhes}">
-              <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 4">
-            </a>
+    <div id="slider" class="carousel slide slider" data-bs-ride="false">
+      <div class="carousel-inner">
+        <div th:each="movie, iterStat : ${movies}" class="carousel-item" th:classappend="${iterStat.index == 0} ? 'active'">
+          <div class="row">
+            <!-- Exibe 4 filmes por linha -->
+            <div class="col" th:each="m : ${movie}">
+              <a th:href="@{/detalhes}">
+                <img th:src="${m.coverImgUrl}" class="d-block w-100" th:alt="${m.title}">
+              </a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <div class="row">
-          <div class="col">
-            <a th:href="@{/detalhes}">
-              <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 5">
-            </a>
-          </div>
-          <div class="col">
-            <a th:href="@{/detalhes}">
-              <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 6">
-            </a>
-          </div>
-          <div class="col">
-            <a th:href="@{/detalhes}">
-              <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 7">
-            </a>
-          </div>
-          <div class="col">
-            <a th:href="@{/detalhes}">
-              <img src="https://localhost:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Filme 8">
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
+
+
     <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Anterior</span>
